# systeme-gestion-notes

./: .gitignore  README.md  main_app.py  test_sdk.py
docs/: openapi.yaml
sdk/: .manifest.json  PyPI_README.md  README.md  install.cmd  install.sh  pyproject.toml
sdk/documentation/models/: Grade.md  Student.md
sdk/documentation/services/: GradesService.md  StudentsService.md
sdk/documentation/snippets/: snippets.json
sdk/examples/: install.cmd  install.sh  sample.py
sdk/src/new_specification_sdk/: __init__.py  sdk.py  sdk_async.py
sdk/src/new_specification_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/src/new_specification_sdk/models/: __init__.py  grade.py  student.py
sdk/src/new_specification_sdk/net/environment/: environment.py
sdk/src/new_specification_sdk/net/transport/: serializer.py
sdk/src/new_specification_sdk/services/: grades.py  students.py
sdk/src/new_specification_sdk/services/async_/: grades.py  students.py
sdk/src/new_specification_sdk/services/utils/: base_service.py
server/: app.py
