[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "new_specification_sdk"
version = "1.0.0"
description = """API pour la gestion des étudiants et le suivi de leurs performances académiques."""
readme = "PyPI_README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0,<3.0.0"
]
